--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,20 @@
         .catch(err => console.error('Error', err));
     }
   </script>-->
+	<script src="assets/materialize/js/jquery-3.1.1.min.js"></script>
+	<script src="assets/materialize/js/materialize.min.js"></script>
+  <link href="assets/materialize/css/materialize.min.css" rel="stylesheet">
 
-  <link href="build/main.css" rel="stylesheet">
-
+	<link href="build/main.css" rel="stylesheet">
 </head>
+	<style>
+	input, h1, h2, h3, h4, h5, h6, 
+	ul, ol, dl, dd, li, 
+	p, span {
+		margin: 0px;
+		padding: 0px;
+	}
+	</style>
 <body>
 
   <!-- Ionic's root component and where the app will load -->
