--- a/src/pages/userpage/userpage.html
+++ b/src/pages/userpage/userpage.html
@@ -4,11 +4,39 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-	<ion-title class="page-title">Hello TextShare</ion-title>
-</ion-header>
+<ion-menu [content]="content" side="right">
 
+	<ion-header>
+		<ion-toolbar class="page-toolbar">
+			<ion-title class="page-title">
+				<div class="user_top">
+					<div class="circle user_pic">
+						<!--<img src="" alt="">-->
+					</div>
+					<div class="user_info">
+						USER_NAME <br>
+						가입일 : 0000-00-00 <br><br>
+						logout
+					</div>
+				</div>
+			</ion-title>
+		</ion-toolbar>
+	</ion-header>
 
-<ion-content padding>
+	<ion-content class="user-link-list">
+		<ul class="user_side_list">
+			<li><ion-icon name="md-person"></ion-icon>My Page</li>
+			<li><ion-icon name="md-people"></ion-icon>Study Manage</li>
+			<ul class="sub-list">
+				<li>StudyList</li>
+				<li>StudySearch</li>
+			</ul>
+			<li><ion-icon name="md-send"></ion-icon>TextShare</li>
+			<ul class="sub-list">
+				<li>Textshare</li>
+			</ul>
+		</ul>
+	</ion-content>
+</ion-menu>
 
-</ion-content>
+<ion-nav [root]="rootPage" #content></ion-nav>
