--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
 	</p>
 	<div class="loginWrapper">
 		<input type="text" placeholder="User name" [(ngModel)]="user.id">
-		<input type="text" placeholder="Password" [(ngModel)]="user.password">
+		<input type="password" placeholder="Password" [(ngModel)]="user.password">
 	</div>
 	<div class="btnBox">
 		<button type="button" class="btn-flat" (click)="login(user)">LOGIN</button>
