--- a/src/pages/userpage/userpage.html
+++ b/src/pages/userpage/userpage.html
@@ -25,7 +25,8 @@
 
 	<ion-content class="user-link-list">
 		<ul class="user_side_list">
-			<li (click)="openPage(pages.userStdAdmin)"><ion-icon name="md-person"></ion-icon>My Page</li>
+			<li (click)="openPage(pages.userStdAdmin)"><ion-icon name="md-person"></ion-icon>HOME</li>
+			<li (click)="openPage(pages.mypage)"><ion-icon name="md-person"></ion-icon>My Page</li>
 			<li><ion-icon name="md-people"></ion-icon>Study Manage</li>
 			<ul class="sub-list">
 				<li (click)="openPage(pages.stdList)">StudyList</li>
