--- a/src/pages/mypage/mypage.html
+++ b/src/pages/mypage/mypage.html
@@ -7,7 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>mypage</ion-title>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+    <ion-title text-center>My Page</ion-title>
   </ion-navbar>
 
 </ion-header>
