--- a/src/pages/std-list/std-list.html
+++ b/src/pages/std-list/std-list.html
@@ -7,7 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>STDList</ion-title>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+    <ion-title text-center>Study List</ion-title>
   </ion-navbar>
 
 </ion-header>
