--- a/src/pages/std-search/std-search.html
+++ b/src/pages/std-search/std-search.html
@@ -7,7 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>STDSearch</ion-title>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+    <ion-title text-center>Study Search</ion-title>
   </ion-navbar>
 
 </ion-header>
