--- a/src/pages/user-std-admin/user-std-admin.html
+++ b/src/pages/user-std-admin/user-std-admin.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content padding>
-	<ion-card *ngIf="no_admin">
+	<ion-card *ngIf="no_admin" class="no_admin">
 		<ion-item>
 			<ion-avatar item-start>
 				<img src="assets/img/logo_or.svg">
@@ -56,7 +56,7 @@
 		</ion-row>
 	</ion-card>
 
-	<ion-card *ngIf="no_join">
+	<ion-card *ngIf="no_join" class="no_join">
 		<ion-item>
 			<ion-avatar item-start>
 				<img src="assets/img/logo_or.svg">
