--- a/src/pages/userpage/userpage.html
+++ b/src/pages/userpage/userpage.html
@@ -29,7 +29,7 @@
 			<li (click)="openPage(pages.mypage)"><ion-icon name="md-person"></ion-icon>My Page</li>
 			<li><ion-icon name="md-people"></ion-icon>Study Manage</li>
 			<ul class="sub-list">
-				<li (click)="openPage(pages.stdList)">StudyList</li>
+				<!--<li (click)="openPage(pages.stdList)">StudyList</li>-->
 				<li (click)="openPage(pages.stdSearch)">StudySearch</li>
 			</ul>
 			<li><ion-icon name="md-send"></ion-icon>TextShare</li>
