--- a/src/pages/userpage/user-std-admin/user-std-admin.html
+++ b/src/pages/userpage/user-std-admin/user-std-admin.html
@@ -50,7 +50,7 @@
 			</ion-col>
 			<ion-col>
 				<button ion-button clear text-center>
-					<div>바로가기</div>
+					<div (click)="moveToStudy(study.idx)">바로가기</div>
 				</button>
 			</ion-col>
 		</ion-row>
