--- a/src/pages/study/study.html
+++ b/src/pages/study/study.html
@@ -4,15 +4,46 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>study</ion-title>
-  </ion-navbar>
+<ion-menu [content]="study_content" side="right">
+	<ion-header>
+		<ion-toolbar class="page-toolbar">
+			<ion-title class="page-title">
+				<div class="user_top">
+					<div class="circle user_pic">
+						<!--<img src="" alt="">-->
+					</div>
+					<div class="user_info">
+						USER_NAME <br>
+						가입일 : 0000-00-00 <br><br>
+						logout
+					</div>
+				</div>
+			</ion-title>
+		</ion-toolbar>
+	</ion-header>
+	<ion-content class="user-link-list">
+		<ul class="user_side_list">
+			<li (click)="openPage(pages.index)"><ion-icon name="md-skip-backward"></ion-icon>첫 페이지로</li>
+			<li><ion-icon name="md-person"></ion-icon>게시판</li>
+			<ul class="sub-list">
+				<li (click)="openPage(pages.notice)">Notice</li>
+				<li (click)="openPage(pages.freetalk)">Freetalk</li>
+			</ul>
+			<li><ion-icon name="md-person"></ion-icon>운영</li>
+			<ul class="sub-list">
+				<li (click)="openPage(pages.schedule)">Schedule</li>
+				<li (click)="openPage(pages.account)">Account</li>
+				<li (click)="openPage(pages.member)">Members</li>
+			</ul>
+			<li (click)="openPage(pages.mypage)"><ion-icon name="md-person"></ion-icon>자료실</li>
+			<ul class="sub-list">
+				<li (click)="openPage(pages.flow)">Flow</li>
+				<li (click)="openPage(pages.data)">Data</li>
+			</ul>
+		</ul>
 
-</ion-header>
+	</ion-content>
+</ion-menu>
 
-
-<ion-content padding>
-
-</ion-content>
+<ion-nav [root]="rootPage" #study_content></ion-nav>
