--- a/src/pages/study/data/data.html
+++ b/src/pages/study/data/data.html
@@ -6,9 +6,12 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>data</ion-title>
-  </ion-navbar>
+  	<ion-navbar>
+  		<button menuToggle>
+  			<ion-icon name="menu"></ion-icon>
+  		</button>
+    	<ion-title>Data</ion-title>
+  	</ion-navbar>
 
 </ion-header>
 
