--- a/src/pages/study/index/index.html
+++ b/src/pages/study/index/index.html
@@ -6,12 +6,12 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-  	<button menuToggle>
-  		<ion-icon name="menu"></ion-icon>
-  	</button>
-    <ion-title text-center>Index</ion-title>
-  </ion-navbar>
+  	<ion-navbar>
+  		<button menuToggle>
+  			<ion-icon name="menu"></ion-icon>
+  		</button>
+    	<ion-title>Index</ion-title>
+  	</ion-navbar>
 
 </ion-header>
 
