--- a/src/pages/study/notice/notice.html
+++ b/src/pages/study/notice/notice.html
@@ -6,9 +6,12 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>notice</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<button menuToggle>
+	  		<ion-icon name="menu"></ion-icon>
+	  	</button>
+		<ion-title>공지사항</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
