--- a/src/pages/study/freetalk/freetalk.html
+++ b/src/pages/study/freetalk/freetalk.html
@@ -5,10 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>freetalk</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<button menuToggle>
+	  		<ion-icon name="menu"></ion-icon>
+	  	</button>
+		<ion-title>자유게시판</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
