--- a/src/pages/study/member/member.html
+++ b/src/pages/study/member/member.html
@@ -6,9 +6,12 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>member</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<button menuToggle>
+	  		<ion-icon name="menu"></ion-icon>
+	  	</button>
+		<ion-title>Member</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
