--- a/src/pages/study/schedule/schedule.html
+++ b/src/pages/study/schedule/schedule.html
@@ -6,9 +6,12 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>schedule</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<button menuToggle>
+	  		<ion-icon name="menu"></ion-icon>
+	  	</button>
+		<ion-title>Schedule</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
