--- a/src/pages/study/study.html
+++ b/src/pages/study/study.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 
-<ion-menu [content]="study_content" side="right">
+<ion-menu id="studyMenu" [content]="content" side="right">
 	<ion-header>
 		<ion-toolbar class="page-toolbar">
 			<ion-title class="page-title">
@@ -46,4 +46,4 @@
 	</ion-content>
 </ion-menu>
 
-<ion-nav [root]="rootPage" #study_content></ion-nav>
+<ion-nav [root]="rootPage" #content></ion-nav>
