--- a/src/pages/userpage/userpage.html
+++ b/src/pages/userpage/userpage.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-menu [content]="content" side="right">
+<ion-menu id="userpageMenu" [content]="content" side="right">
 
 	<ion-header>
 		<ion-toolbar class="page-toolbar">
