--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   </script>-->
 	<script src="assets/materialize/js/jquery-3.1.1.min.js"></script>
 	<script src="assets/materialize/js/materialize.min.js"></script>
+	<script src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=4YTa1awkt2vPfKrRToJ0&submodules=geocoder"></script>
   <link href="assets/materialize/css/materialize.min.css" rel="stylesheet">
 	<link href="build/main.css" rel="stylesheet">
 </head>
